[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -34.0
offset_right = 26.5
offset_bottom = 34.0

[node name="startButton" type="Button" parent="VBoxContainer"]
offset_right = 53.0
offset_bottom = 20.0
focus_neighbor_top = NodePath("../quitButton")
text = "start"

[node name="optionsButton" type="Button" parent="VBoxContainer"]
offset_top = 24.0
offset_right = 53.0
offset_bottom = 44.0
text = "option"

[node name="quitButton" type="Button" parent="VBoxContainer"]
offset_top = 48.0
offset_right = 53.0
offset_bottom = 68.0
text = "quite"

[connection signal="pressed" from="VBoxContainer/startButton" to="." method="_on_startButton_pressed"]
[connection signal="pressed" from="VBoxContainer/quitButton" to="." method="_on_quitButton_pressed"]
